@@ -4,12 +4,12 @@ package com.meterware.pseudoserver;
 *
 * Copyright (c) 2001-2003, Russell Gold
 *
-* Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated 
-* documentation files (the "Software"), to deal in the Software without restriction, including without limitation 
+* Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated
+* documentation files (the "Software"), to deal in the Software without restriction, including without limitation
 * the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and
 * to permit persons to whom the Software is furnished to do so, subject to the following conditions:
 *
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions 
+* The above copyright notice and this permission notice shall be included in all copies or substantial portions
 * of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
@@ -54,7 +54,7 @@ class HttpRequest {
         _command  = st.nextToken();
         _uri      = st.nextToken();
         _protocol = st.nextToken();
-    
+
         if (!_command.equals( "GET" ) && !_command.equals( "POST" ) && !_command.equals( "PUT" )) {
             throw new UnknownMethodException( _command );
         }
@@ -192,14 +192,17 @@ class HttpRequest {
 
 
     boolean wantsKeepAlive() {
+        /**
         return false;
-//        if ("Keep-alive".equalsIgnoreCase( getConnectionHeader() )) {
-//            return true;
-//        } else if (_protocol.equals( "HTTP/1.1" )) {
-//            return !"Close".equalsIgnoreCase( getConnectionHeader() );
-//        } else {
-//            return false;
-//        }
+        /**/
+        if ("Keep-alive".equalsIgnoreCase( getConnectionHeader() )) {
+            return true;
+        } else if (_protocol.equals( "HTTP/1.1" )) {
+            return !"Close".equalsIgnoreCase( getConnectionHeader() );
+        } else {
+            return false;
+        }
+        /**/
     }
 
 
